--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>04 - Webpack</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="./src/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
 
 </head>
@@ -13,7 +13,7 @@
 <body>
 
   <div id="logo">
-    <img src="../textures/ww/logo.png">
+    <img src="./textures/ww/logo.png">
   </div>
 
   <div id="animlogo">
