--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div id="main" class="rotate" >
 
-    <img src="../textures/ww/main.png" width="750" height="750" style='z-index:110'>
+    <img src="/textures/ww/main.png" width="750" height="750" style='z-index:110'>
     </br> </br>
     <button id="btn2">Enter Space</button>
     </br>
