--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script src="./p5/p5_1.js"></script>
 
   <canvas class="webgl"> </canvas>
-  <script type="module" src="./src/script14_color.js"></script>
+  <script type="module" src="./script14_color.js"></script>
 
 </body>
 
