--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>04 - Webpack</title>
+  <title>Sacred, Digital Sacred</title>
   <link rel="stylesheet" href="./src/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+  <link rel="icon" href="./textures/fav3.png" type="image/x-icon" />
 
 </head>
 
