--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
   <script src="./p5/p5_1.js"></script>
 
   <canvas class="webgl"> </canvas>
-  <script type="module" src="./script14_color.js"></script>
+  <!-- <script type="module" src="./script14_color.js"></script> -->
+  <script type="module" src="./script15_particles.js"></script>
 
 </body>
 
