--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       into a overwhelming flurry of media and banner ads </br>
       constantly vying for time and attention, is there a </br> space online where one finds peace?
       </br></br>
-    <span style="color:#fff3e3">  Sacred, Digital Sacred </span> is a project by <a href="https://www.instagram.com/devethanvalladares/">Dev Valladares</a></br> exploring the limits and possibilities of using design to </br> create feelings of transcendence, in cyberspace. Spaces designed </br> to slow down; to created to evoke an appreciation </br>
+    <span style="color:#fff3e3">  Sacred, Digital Sacred </span> is a project by <a href="https://www.instagram.com/devethanvalladares/">Dev Valladares</a></br> exploring the limits and possibilities of using design for </br> transcendence; in cyberspace. Spaces designed </br> to slow down; to created to evoke an appreciation </br>
       for life,
       the universe, and reality; and perhaps, </br> to ask the big questions.
       </br> </br> </br></br>
